<?xml version="1.0"?>
<package format="2">
  <name>steve_safety_brake</name>
  <version>0.0.0</version>
  <description>The steve_safety_brake package</description>

  <maintainer email="loic.boileau@usherbrooke.ca">loic</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>


</package>
